--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ permalink: /:title/
 
 # Authors
 authors:
-  nN:
+  Nan:
     name: Nan
     display_name: Nan
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
