--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,22 @@ permalink: /:title/
 
 # Authors
 authors:
-  Nan:
-    name: Nan
-    display_name: Nan
+  sal:
+    name: Sal
+    display_name: Sal
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: wowthemesnet@gmail.com
     web: https://nan.is-a.dev/
     twitter: https://facebook.com/nan.phtml/
     description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
+  Nan:
+    name: Nan
+    display_name: Nan     
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
+    email: uyeid8@gmail.com
+    web: https://nan.is-a.dev/
+    twitter: https://facebook.com/nan.phtml/
     description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
 
 # Plugins
