--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ authors:
     email: uyeid8@gmail.com
     web: https://nan.is-a.dev/
     twitter: https://facebook.com/nan.phtml/
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+    description: "Hai, nama saya Nan. Saya gemar menulis sejak 2016."
 
 # Plugins
 plugins:
@@ -67,6 +67,6 @@ adsense-data-ad-client: "ca-pub-3412143450191416"
 adsense-data-ad-slot: "1363087678"
 
 # Lazy Images ("enabled" or "disabled")
-lazyimages: "disabled"
+lazyimages: "enable"
 
 exclude: [changelog.md, LICENSE.txt, README.md, Gemfile, Gemfile.lock]
