--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ authors:
     email: uyeid8@gmail.com
     web: https://nan.is-a.dev/
     twitter: https://facebook.com/nan.phtml/
-    description: "Hai, nama saya Nan. Saya gemar menulis sejak 2016."
+    description: "Hai, perkenalkan saya Nan.<br/>Saya suka menulis dari 2016 hingga sekarang."
 
 # Plugins
 plugins:
