--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site
 name: "Kisah Petani"
 title: "Kisah Petani"
-description: "Jekyll template, Medium styled, free for bloggers."
+description: "Mengupas tuntas cara bermain dengan benar di game Harvest Moon."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
 google_analytics: 'UA-46278016-1'
-disqus: 'nan'
+disqus: 'nandangid'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
