--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ description: "Mengupas tuntas cara bermain Harvest Moon dengan benar."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
-google_analytics: 'UA-46278016-1'
-disqus: 'nandangid'
+google_analytics: 'G-85GW6JFY2N'
+disqus: 'kisahpetani-github-io'
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
