--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
 google_analytics: 'G-85GW6JFY2N'
-disqus: 'kisahpetani-github-io'
+
 mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
 include: ["_pages"]
 permalink: /:title/
@@ -53,6 +53,14 @@ paginate_path: /page:num/
     
 # Other
 markdown: kramdown
+
+#Komentar
+comments:
+	provider : "facebook"
+	facebook:
+		appid : 756630065295142
+		num_posts : # 5 (default)
+		colorscheme : # "light" (default), "dark"
 
 kramdown:
   input: GFM
