--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "Kisah Petani"
 title: "Kisah Petani"
-description: "Mengupas tuntas cara bermain Harvest Moon dengan benar."
+description: "Menyajikan cerita pendek yang meresap, mengundang dalam perjalanan kata-kata yang penuh makna."
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
