--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ authors:
     display_name: Nan     
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: uyeid8@gmail.com
-    web: https://nan.is-a.dev/
+    email: nannn@duckmcom
+    web: https://siputgila.my.id/
     twitter: https://facebook.com/nan.phtml/
-    description: "Hai, perkenalkan saya Nan.<br/>Saya suka menulis dari 2016 hingga sekarang."
+    description: "Pendongeng Digital: Menjelajahi dunia kata dengan imajinasi tak terbatas, membawa cerita-cerita hidup dalam aliran elektronik."
 
 # Plugins
 plugins:
