--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ authors:
     display_name: Nan     
     avatar: 'assets/images/avatar.png'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: nannn@duckmcom
+    email: nannn@duck.com
     web: https://siputgila.my.id/
     twitter: https://facebook.com/nan.phtml/
     description: "Pendongeng Digital: Menjelajahi dunia kata dengan imajinasi tak terbatas, membawa cerita-cerita hidup dalam aliran elektronik."
